# train_patterns

./: .gitmodules  CMakeLists.txt  README.md
docs/: README.md
docs/patterns/: README.md
docs/uml_brief/: README.md
include/patterns/behavioral_patterns/chain_of_responsability/: Client.h  ConcreteHandler1.h  ConcreteHandler2.h  Handler.h
include/patterns/behavioral_patterns/command/: Client.h  Command.h  ConcreteCommand.h  Invoker.h  Receiver.h
include/patterns/behavioral_patterns/interpreter/: AbstractExpression.h  Client.h  Context.h  NonterminalExpression.h  TerminalExpression.h
include/patterns/behavioral_patterns/iterator/: Aggregate.h  ConcreteAggregate.h  ConcreteIterator.h  Iterator.h
include/patterns/behavioral_patterns/mediator/: Colleague.h  ConcreteColleague1.h  ConcreteColleague2.h  ConcreteMediator.h  Mediator.h
include/patterns/behavioral_patterns/memento/: Caretaker.h  Memento.h  Orginator.h
include/patterns/behavioral_patterns/observer/: ConcreteObserver.h  ConcreteSubject.h  Observer.h  Subject.h
include/patterns/behavioral_patterns/state/: Client.h  Context.h  State.h  StateOne.h  StateThree.h  StateTwo.h
include/patterns/behavioral_patterns/strategy/: ConcreteStrategy1.h  ConcreteStrategy2.h  ConcreteStrategy3.h  Context.h  Strategy.h
include/patterns/behavioral_patterns/template_method/: AbstractClass.h  ConcreteClassA.h  ConcreteClassB.h
include/patterns/behavioral_patterns/visitor/: classes.h
include/patterns/generative_patterns/abstract_factory/: AbstractFactory.h  AbstractProductA.h  (+6 more)
tests/: CMakeLists.txt  test_1.cpp
(+45 files in other folders)
